fix footer logo z-index

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -15,4 +15,5 @@
 
 .footerLogo {
     margin: 34px 0;
+    z-index: -1000;
 }
